3.0922:
 - UI:  Major reorganize of code ready for Reboot work
 - Fix: Build queue for Reboot should no longer affect PT build queue
 - Mod: Session timeout is extended from 2hrs to 4hrs
 - Mod: New images (thanks Husky) for hulks
 - Mod: New images for 'Meeting The Lacunans' and 'Ran a successful insurrection'
 - Fix: Minor fix for Fleet Movement Missons
 - Mod: Some changes in prep for Reboot work

3.0921:
 - Mod: Re-org to make code deployment easier and to support Docker
 - Fix: Some minor efficiency changes for sitter auths
 - Fix: Squashed a smelly evil looking bug
 - Mod: Added new supply pod images (Thanks Husky)
 - Mod: Added new empire medals (Thanks Husky)
 - Fix: Minor changes to fix lag issues caused by sitters

3.0920:
 - Mod: Security Sweep reports give number of found spies in subject line.
 - Add: Security Sweep API allows bypassing of empty emails.
 - UI : New captcha panel.
 - Fix: Resource bar bouncing quelled.
 - UI : Clean up on logout, should make logout/login more reliable.
 - Fix: Slightly more red tape.

3.0919:
 - Add: Adding docker support.
 - Fix: Emails to GG owners during fissure explosion were missing numbers.
 - Fix: Halls don't need to show up as buildable.
 - Fix: Downgrade of SS modules fixed.
 - Fix: Merc Guild shouldn't call not allowed RPCs when damaged.
 - Mod: Repair tab moved to first.
 - Mod: Terraforming platforms only form terra, GG plats can handle all gas giants.
 - Fix: SSL shouldn't show waste in red, it's not being consumed.

3.0918:
 - Fix: Unallied players should never see anyone else in purple on the starmap.
 - Fix: Some of the numbers in the APIs are now returned as numbers instead of strings.
 - Mod: Add commas to total cargo in TM and SST.
 - Fix: Initialize date_created field for spies.
 - Mod: Can cancel more than one build at a time via API.
 - Add: Cancel All button to dev ministry.
 - Fix: Abandoned planets' build queues are now cancelled.
 - Fix: Fissure medal when you cause a fissure with BHG.