@@ -1,4 +1,5 @@
 3.0922:
+ - Fix: Colony Ships in flight counted again
  - UI:  Major reorganize of code ready for Reboot work
  - Fix: Build queue for Reboot should no longer affect PT build queue
  - Mod: Session timeout is extended from 2hrs to 4hrs
